# clutter-gst

./: .gitignore  Makefile.am  NEWS  clutter-gst.doap  clutter-gst.pc.in  configure.ac
clutter-gst/: Makefile.am  clutter-gst-auto-video-sink.c  clutter-gst-auto-video-sink.h  clutter-gst-player.c  clutter-gst-player.h  clutter-gst-plugin.c  clutter-gst-private.h  clutter-gst-util.c  clutter-gst-version.h.in  clutter-gst-video-sink.c  clutter-gst-video-sink.h  clutter-gst-video-texture.c  clutter-gst.h
doc/reference/: Makefile.am
examples/: Makefile.am  video-player.c  video-sink-navigation.c  video-sink.c
tests/: Makefile.am  test-alpha.c  test-rgb-upload.c  test-start-stop.c  test-yuv-upload.c
